force-app/main/default/objects/KimbleOne__InterfaceSource__c/KimbleOne__InterfaceSource__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Interface Source</label>
    <nameField>
        <label>Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface Source</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>