force-app/main/default/objects/KimbleOne__InterfaceSource__c/fields/KimbleOne__ContextType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Context Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ContextType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Interface Source</relationshipLabel>
    <relationshipName>InterfaceSources</relationshipName>
    <type>Lookup</type>
</CustomField>