force-app/main/default/objects/KimbleOne__InterfaceSource__c/fields/KimbleOne__ExportObject__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExportObject__c</fullName>
    <label>Export Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>