force-app/main/default/objects/KimbleOne__InterfaceSource__c/fields/KimbleOne__InterfaceScope__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceScope__c</fullName>
    <label>Interface Scope</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>