force-app/main/default/objects/KimbleOne__InterfaceSource__c/fields/KimbleOne__InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Interface Type</label>
    <referenceTo>KimbleOne__InterfaceType__c</referenceTo>
    <relationshipLabel>Interface Source</relationshipLabel>
    <relationshipName>InterfaceSources</relationshipName>
    <type>Lookup</type>
</CustomField>